Center audio controls and fix overflow issues

--- a/app/sass/modules/_globals.scss
+++ b/app/sass/modules/_globals.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .gradient {
   background-image:
     linear-gradient(to bottom right,
